--- a/README
+++ b/README
@@ -1,9 +1,8 @@
 XML::Generator - A simple module to help in generating XML documents
 
-Version 0.2 - 1999.02.10
+Version 0.3 - 1999.03.13
 
-Added support for namespaces.
-Allow "new" as a tag name.
+Fixed undefined variables warnings, as reported by John Labovitz (johnl@meer.net)
 
 Copyright (c) 1999 Benjamin Holzman. All rights reserved.
 This program is free software; you can redistribute it and/or
