Import of BHOLZMAN/XML-Generator-0.4_1 from CPAN.
gitpan-cpan-distribution: XML-Generator
gitpan-cpan-version:      0.4_1
gitpan-cpan-path:         BHOLZMAN/XML-Generator-0.4_1.tar.gz
gitpan-cpan-author:       BHOLZMAN
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -11,4 +11,9 @@ Revision history for Perl extension XML::Generator.
 	- Allowed "new" as a tag name; bholzman
 
 0.3   Tue Apr 13 09:11:13 1999
-	- Fixed undefined variables warnings as reported by John Labovitz (johnl@meer.net)
+	- Fixed undefined variables warnings as reported by John Labovitz
+	 (johnl@meer.net)
+
+0.4   Fri Jul 02 11:44:32 1999
+	- Fixed a few remarkably dumb bugs which I can't believe survived
+	  this long.  Improved the documentation slightly. 
