--- a/README
+++ b/README
@@ -1,9 +1,11 @@
 XML::Generator - A simple module to help in generating XML documents
 
-Version 0.4 - 1999.07.02
+Version 0.5 - 1999.09.08
 
- Fixed a few remarkably dumb bugs which I can't believe survived
-  this long.  Improved the documentation slightly. 
+- Fixed one lingering definedness bug
+- Added escaping options to XMLify content
+- Added global namespace option
+- Fixed namespace support somewhat
 
 
 Copyright (c) 1999 Benjamin Holzman. All rights reserved.
