--- a/README
+++ b/README
@@ -1,13 +1,19 @@
 XML::Generator - A simple module to help in generating XML documents
 
-Version 0.5 - 1999.09.08
+Version 0.6 - 2000.06.11
 
-- Fixed one lingering definedness bug
-- Added escaping options to XMLify content
-- Added global namespace option
-- Fixed namespace support somewhat
+- Cleaned-up, modularized rewrite courtesy of Bron Gondwana
+  (perlcode@brong.net)
+- XML::Generator now returns objects blessed into XML::Generator::auto
+  which contains only an AUTOLOAD that redirects requests to the
+  proper method in XML::Generator.
+- A new option is available in the constructor to force stricter
+  conformance to the XML specification ('conformance' => 'strict').
+  This also enables some special tags; "xmlpi", "xmlcmnt", "xmldecl"
+  and "xmlcdata" that can be used to generate, respectively, processing
+  instructions, comments, the XML declaration, and character data
+  sections. 
 
-
-Copyright (c) 1999 Benjamin Holzman. All rights reserved.
+Copyright 1999-2000 Benjamin Holzman. All rights reserved.
 This program is free software; you can redistribute it and/or
 modify it under the same terms as Perl itself.
