--- a/Changes
+++ b/Changes
@@ -36,3 +36,7 @@ Revision history for Perl extension XML::Generator.
 	  and "xmlcdata" that can be used to generate, respectively, processing
 	  instructions, comments, the XML declaration, and character data
 	  sections. 
+
+0.7   Mon Jun 13 09:14:32 2000
+	- Pretty-printing patch from Bron Gondwana
+	- Undefined warnings patch from Bron Gondwana
