--- a/README
+++ b/README
@@ -1,14 +1,20 @@
 XML::Generator - A module to help in generating XML documents
 
-Version 0.8 - 2000.07.12
+Version 0.9 - 2000.11.18
 
-- Bug-fix for pretty-printing
-- New special tag, "xml" which takes a complete XML document and
-  "finalizes" it, so it can't be further embedded.
-- Arguments passed as scalar refs will not be escaped, even if the
-  XML::Generator object was constructed with the 'escape' => "always"
-  option.
+- Massive code reorganization to support subclassing, courtesy of
+  Nathan Winger (nate@nateware.com)
+- New instantiation option, 'empty', to control how empty tags are
+  rendered.
+- Improved internal representation for improved performance
+  ( $gen->foo($gen->bar($gen->baz( $really_big_string ))) used to copy
+  $really_big_string three times; as long as the 'pretty' option is not
+  supplied, this is no longer the case. )
+- Fixed xml() tag to allow comments and processing instructions before
+  and/or after the xml document.
+- New special tag, xmldtd(), which used to be part of xmldecl().
 
 Copyright 1999-2000 Benjamin Holzman. All rights reserved.
 This program is free software; you can redistribute it and/or
 modify it under the same terms as Perl itself.
+
