--- a/Changes
+++ b/Changes
@@ -102,3 +102,8 @@ Revision history for Perl extension XML::Generator.
 0.95  Sun Feb 29 22:21:00 2004
 	- Enhanced STACKED AUTOLOAD feature to provide a default import()
 	- Documentation fixups.
+
+0.96  Sun Feb 29 23:00:00 2004
+	- More documentation fixups.
+	- Only check for xml() subs under strict conformance.
+	- Small performance optimizations.
