--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 XML::Generator - A module to help in generating XML documents
 
+Version 0.97 - 2004.3.1
+- Fixed bugs in DOM.t reported by David Wheeler.
+
 Version 0.96 - 2004.2.29
 - More documentation fixups.
 - Only check for xml() subs under strict conformance.
