--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 XML::Generator - A module to help in generating XML documents
 
+Version 0.98 - 2004.3.1
+- Fixed bug in DOM.t when XML::DOM not installed (caused by fix in 0.97)
+
 Version 0.97 - 2004.3.1
 - Fixed bugs in DOM.t reported by David Wheeler.
 
