--- a/README
+++ b/README
@@ -19,6 +19,16 @@ To get this:
 
 RECENT CHANGES
 ------ -------
+Version 0.99_01 - 2004.10.19
+- Changed default behavior of 'use XML::Generator' to not attempt to export
+  AUTOLOAD. Removed ':noimport' option.
+- Allowed more than two components in a namespace, to allow explicit xmlns:
+  attributes to be output on demand.  Introduced '#default' token.
+- Improved output aesthetics when there are lot of attributes and the generator
+  was configured with the 'pretty' option.
+- Added allowedXMLTags (alias to allowed_xml_tags) and qualified_attributes
+  (alias to qualifiedAttributes) to rationalize interface.
+  
 Version 0.99 - 2004.3.23
 - Removed automatic prefixing of attribute names when using a namespace.
 - Added 'qualifiedAttributes' constructor option to emulate prior attribute
