Import of BHOLZMAN/XML-Generator-0.99_02 from CPAN.
gitpan-cpan-distribution: XML-Generator
gitpan-cpan-version:      0.99_02
gitpan-cpan-path:         BHOLZMAN/XML-Generator-0.99_02.tar.gz
gitpan-cpan-author:       BHOLZMAN
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -134,3 +134,6 @@ Revision history for Perl extension XML::Generator.
 	  was configured with the 'pretty' option.
 	- Added allowedXMLTags (alias to allowed_xml_tags) and qualified_attributes
 	  (alias to qualifiedAttributes) to rationalize interface.
+
+0.99_02  Tue Oct 19 23:02:00 2004
+	- Fixed mistake in RDF example.
