--- a/README
+++ b/README
@@ -20,6 +20,9 @@ To get this:
 RECENT CHANGES
 ------ -------
 
+1.01     Tue Jul 8  11:45:00 2007
+	- Documentation cleanup.
+
 1.0      Fri Jun 22 16:51:00 2007
 	- Fixed bug #23594, "Embedded escaping does not work as expected",
 	  reported by M. Zizka; clarified documentation and added 'even-entities'
