Import of BHOLZMAN/XML-Generator-1.03 from CPAN.
gitpan-cpan-distribution: XML-Generator
gitpan-cpan-version:      1.03
gitpan-cpan-path:         BHOLZMAN/XML-Generator-1.03.tar.gz
gitpan-cpan-author:       BHOLZMAN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension XML::Generator.
 
+1.03     Thu Jul 30 17:02:00 2009
+    - Version bump because somebody released an unauthorized XML-Generator-1.02
+
 1.01     Tue Jul 8  11:45:00 2007
 	- Documentation cleanup.
 
